--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -1,10 +1,29 @@
 body {
   background-color: #ffffff;
-  font-size: 12px;
   font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE",
     lucida, "Helvetica CE", sans-serif;
   color: #000000;
   margin: 10px;
+}
+
+h1 {
+  font-family: Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE",
+    sans-serif;
+  border-bottom: 1px solid #afafaf;
+  font-weight: bold;
+  margin: 0px;
+  padding: 0px;
+  color: black;
+}
+
+h2 {
+  font-family: Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE",
+    sans-serif;
+  border-bottom: 1px solid #afafaf;
+  font-weight: bold;
+  margin: 0px;
+  padding: 0px;
+  color: gray;
 }
 
 a:link,
@@ -28,22 +47,19 @@ a:visited:hover {
 }
 
 .menu {
-  position: fixed;
-  width: 50%;
+  width: 100%;
   padding: 20px;
   z-index: 1000;
-  float: right;
-  background-color: lightblue;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .center_content {
   position: relative;
-  margin-top: 150px;
   padding: 20px;
+  overflow-y: auto;
 }
 
 .details_section {
+  padding: 20px;
   margin-top: 20px;
 }
 
